fix select organization modal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -268,6 +268,13 @@ targeting the last_child like so '.card__content > :last-child'
   margin-bottom: 1em;
 }
 
+/* fix: modal overflow */
+.modal {
+  max-width: 50em;
+  max-height: 90vh;
+  overflow-y: scroll;
+}
+
 /* light button & link */
 button.light,
 a.light {
