--- a/src/components/elements/Prompt.css
+++ b/src/components/elements/Prompt.css
@@ -1,9 +1,3 @@
-.modal.comment-action {
-  max-width: 50em;
-  max-height: 90vh;
-  overflow-y: scroll;
-}
-
 .modal .event-item {
   max-height: 100px;
   overflow-y: scroll;
